# github-profile-toolbox

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yaml
.github/: dependabot.yaml  github-profile-toolbox.yaml  renovate.json5
.github/workflows/: ci.yaml  docker.yaml  update-major-version.yaml  update-toolbox.yaml
src/: config.rs  config_schema.rs  main.rs  markdown.rs  schema.rs  tool.rs
src/simple_icons/: color.rs  data.rs  mod.rs  slug.rs
tests/: main.rs
