[package]
name = "github-profile-toolbox"
description = "Generate a toolbox to be inserted in the GitHub profile's README"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
unicode-normalization = "0.1.24"
ureq = "2.10.1"
once_cell = "1.20.2"
markdown-table-formatter = "0.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yml = "0.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
